# tdpack

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Config.cmake.in  MANIFEST  README.org  config.in  pixi.toml
.ssm.d/: control.json.in
conda.recipe/: recipe.yaml
src/: mesahu.F90  mfodla.F90  mfodle.F90  mfodqa.F90  mfodqs.F90  mfoefq.F90  mfoeic.F90  mfoew.F90  mfoewa.F90  mfohr.F90  mfoqfe.F90  mfoqsa.F90  mfoqst.F90  mfottv.F90  mfottvh.F90  mfotvht.F90  mfotvt.F90  mhrahu.F90  mhuaes.F90  mhuahr.F90  modhui.F90  mthtaw.F90
